alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_6.snap
---
source: alpm-types/src/relation/soname.rs
---
invalidsoname.so~1.64
^
invalid shared object name
Parser failed with the following error:
invalidsoname.so~1.64
                ^
invalid unexpected trailing content after shared object name.
expected end of input.
